Ready for production

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,19 +11,21 @@
 
         <!-- Custom CSS -->
         <link rel=stylesheet href=/css/style.css>
-        <link rel=stylesheet href=http://fonts.googleapis.com/css?family=Quicksand:300|Fanwood+Text>
+        <link rel=stylesheet href=http://fonts.googleapis.com/css?family=Quicksand:300>
     </head>
     <body>
 
-        <div class="container">
-            <div class="header">
-                <h1 class="title"><a href="/">{{ site.name }}</a></h1>
+        <div class=container>
+            <div class=header>
+                <h1 class=title><a href="/">{{ site.name }}</a></h1>
             </div>
 
-            {{ content }}
+            <div class=content>
+                {{ content }}
+            </div>
 
-            <div class="footer">
-                <div class="contact">
+            <div class=footer>
+                <div class=contact>
                     <p>
                     Stian Jensen<br />
                     Developer<br />
