--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,6 @@ a {
     clear: both; }
 
 .header {
-  z-index: 100;
   height: 60px;
   box-shadow: 0px 60px 90px -26px rgba(0, 0, 0, 0.5);
   width: 100%; }
@@ -187,26 +186,23 @@ a {
     #home .item .image {
       border-radius: 50%;
       box-shadow: inset 5px 5px 30px rgba(0, 0, 0, 0.5);
-      overflow: hidden; }
+      overflow: hidden;
+      z-index: -1;
+      height: 0;
+      background-repeat: no-repeat;
+      background-size: cover;
+      position: relative; }
       @media screen and (min-width: 600px) {
         #home .item .image {
           width: 75%;
           margin: 0 auto;
-          position: relative; } }
+          padding-bottom: 75%; } }
       @media screen and (max-width: 599px) {
         #home .item .image {
-          display: block;
+          width: 20%;
           float: left;
-          margin-right: 7.42297%;
-          width: 19.43277%; }
-          #home .item .image:last-child {
-            margin-right: 0; } }
-      #home .item .image img {
-        width: 100%;
-        border-radius: 50%;
-        z-index: -1;
-        display: block;
-        position: relative; }
+          padding-bottom: 20%;
+          margin-right: 5%; } }
     #home .item h2 {
       font-family: "Quicksand", sans-serif; }
     #home .item p {
