--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,10 @@
 
         <div class=container>
             <div class=header>
-                <h1 class=title><a href="/">{{ site.name }}</a></h1>
+                <div class=inner-header>
+                    <a href="/cv/" class=cv-link>CV</a>
+                    <h1 class=title><a href="/">{{ site.name }}</a></h1>
+                </div>
             </div>
 
             <div class=content>
