--- a/_scss/style.scss
+++ b/_scss/style.scss
@@ -162,6 +162,10 @@ h2.subtitle {
     .contact {
         float: left;
         width: 70%;
+
+        dd {
+            font-family: verdana, sans-serif;
+        }
     }
     .me {
         float: right;
@@ -192,7 +196,11 @@ h2.subtitle {
             max-width: 70%;
             margin-left: 10%;
             margin-bottom: 15px;
-            font-size: .95em;
+            font-size: .9em;
+
+            p {
+                font-family: verdana, sans-serif;
+            }
         }
         strong {
             font-weight: normal;
