--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,8 @@
         <!-- Custom CSS -->
         <link rel=stylesheet href=/css/style.css>
         <link rel=stylesheet href=http://fonts.googleapis.com/css?family=Quicksand:300>
+
+        <link rel="shortcut icon" href=/favicon.png />
     </head>
     <body>
 
