--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -17,7 +17,7 @@
 
         <div class=container>
             <div class=header>
-                <h1 class=title>Stian Jensen</h1>
+                <h1 class=title><a href=/>Stian Jensen</a></h1>
             </div>
 
             <h2 class=subtitle>CV</h2>
