Fix broken mobile layout
Unsure why the span-columns were there in the first place, but something
must have caused it not to have an effect earlier.
On mobile items are supposed to take up the full width, not just 4/12
columns.

--- a/_sass/_customStyle.scss
+++ b/_sass/_customStyle.scss
@@ -110,7 +110,7 @@ h2.subtitle {
         padding-bottom: .7em;
 
         @include media($mobile-only) {
-            @include span-columns(4);
+            overflow: hidden;
             margin: .7em 0;
             border-bottom: 1px dashed #555;
 
