--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 
         <!-- Custom CSS -->
         <link rel=stylesheet href=/css/style.css>
-        <link rel=stylesheet href=http://fonts.googleapis.com/css?family=Quicksand:300>
+        <link rel=stylesheet href=https://fonts.googleapis.com/css?family=Quicksand:300>
 
         <link rel="shortcut icon" href=/favicon.png />
     </head>
@@ -38,11 +38,11 @@
                     </p>
                 </div>
                 <div class="social-icons">
-                    <a href="http://twitter.com/stiaje/" target="_blank" class="icon-twitter"></a>
-                    <a href="http://github.com/stianjensen/" target="_blank" class="icon-github"></a>
-                    <a href="http://instagram.com/stiaje/" target="_blank" class="icon-instagram"></a>
-                    <a href="http://www.linkedin.com/pub/stian-jensen/47/672/366" target="_blank" class="icon-linkedin"></a>
-                    <a href="http://facebook.com/stiaje" target="_blank" class="icon-facebook"></a>
+                    <a href="https://twitter.com/stiaje/" target="_blank" class="icon-twitter"></a>
+                    <a href="https://github.com/stianjensen/" target="_blank" class="icon-github"></a>
+                    <a href="https://instagram.com/stiaje/" target="_blank" class="icon-instagram"></a>
+                    <a href="https://www.linkedin.com/pub/stian-jensen/47/672/366" target="_blank" class="icon-linkedin"></a>
+                    <a href="https://facebook.com/stiaje" target="_blank" class="icon-facebook"></a>
                     <a href="http://stiaje.tumblr.com/" target="_blank" class="icon-tumblr"></a>
                     <a href="https://plus.google.com/108896626575864706598/" target="_blank" class="icon-googleplus"></a>
                 </div>
