--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,68 +1,33 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }}</title>
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
+---
+layout: base
+---
 
-        <!-- syntax highlighting CSS -->
-        <link rel=stylesheet href=/css/syntax.css>
+<div class=header>
+  <div class=inner-header>
+    <a href="/cv/" class=cv-link>CV</a>
+    <h1 class=title><a href="/">{{ site.name }}</a></h1>
+  </div>
+</div>
 
-        <!-- Custom CSS -->
-        <link rel=stylesheet href=/css/style.css>
-        <link rel=stylesheet href=https://fonts.googleapis.com/css?family=Quicksand:300>
+<div class=content>
+  {{ content }}
+</div>
 
-        <link rel="shortcut icon" href=/favicon.png />
-    </head>
-    <body>
-
-        <div class=container>
-            <div class=header>
-                <div class=inner-header>
-                    <a href="/cv/" class=cv-link>CV</a>
-                    <h1 class=title><a href="/">{{ site.name }}</a></h1>
-                </div>
-            </div>
-
-            <div class=content>
-                {{ content }}
-            </div>
-
-            <div class=footer>
-                <div class=contact>
-                    <p>
-                    Stian Jensen<br />
-                    Developer<br />
-                    me@stianj.com
-                    </p>
-                </div>
-                <div class="social-icons">
-                    <a href="https://twitter.com/stiaje/" target="_blank" class="icon-twitter"></a>
-                    <a href="https://github.com/stianjensen/" target="_blank" class="icon-github"></a>
-                    <a href="https://instagram.com/stiaje/" target="_blank" class="icon-instagram"></a>
-                    <a href="https://www.linkedin.com/pub/stian-jensen/47/672/366" target="_blank" class="icon-linkedin"></a>
-                    <a href="https://facebook.com/stiaje" target="_blank" class="icon-facebook"></a>
-                    <a href="http://stiaje.tumblr.com/" target="_blank" class="icon-tumblr"></a>
-                    <a href="https://plus.google.com/108896626575864706598/" target="_blank" class="icon-googleplus"></a>
-                </div>
-            </div>
-
-        </div> <!-- /container -->
-
-        <script src=//cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js></script>
-        <script type="text/javascript">
-
-          var _gaq = _gaq || [];
-          _gaq.push(['_setAccount', 'UA-7911549-1']);
-          _gaq.push(['_trackPageview']);
-
-          (function() {
-            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-          })();
-
-        </script>
-    </body>
-</html>
+<div class=footer>
+  <div class=contact>
+    <p>
+    Stian Jensen<br />
+    Developer<br />
+    me@stianj.com
+    </p>
+  </div>
+  <div class="social-icons">
+    <a href="https://twitter.com/stiaje/" target="_blank" class="icon-twitter"></a>
+    <a href="https://github.com/stianjensen/" target="_blank" class="icon-github"></a>
+    <a href="https://instagram.com/stiaje/" target="_blank" class="icon-instagram"></a>
+    <a href="https://www.linkedin.com/pub/stian-jensen/47/672/366" target="_blank" class="icon-linkedin"></a>
+    <a href="https://facebook.com/stiaje" target="_blank" class="icon-facebook"></a>
+    <a href="http://stiaje.tumblr.com/" target="_blank" class="icon-tumblr"></a>
+    <a href="https://plus.google.com/108896626575864706598/" target="_blank" class="icon-googleplus"></a>
+  </div>
+</div>
