Fix font shorthand, to declare font-weight first

--- a/_sass/_customStyle.scss
+++ b/_sass/_customStyle.scss
@@ -57,7 +57,7 @@ a {
         right: 0;
     }
     h1 {
-        font: 35px/60px "Arvo", serif normal;
+        font: normal 35px/60px "Arvo", serif;
         text-align: center;
 
         a {
