Change developer to software developer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@ layout: base
   <div class=contact>
     <p>
     Stian Jensen<br />
-    Developer<br />
+    Software Developer<br />
     me@stianj.com
     </p>
   </div>
