Add more open graph tags

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>{{ page.title }}</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="og:description" content="Personal website of Stian Jensen, software developer from Norway.">
-    <meta name="og:image" content="https://stianj.com/images/me.jpg">
+    <meta property="og:title" content="{{ page.title }}">
+    <meta property="og:url" content="https://stianj.com">
+    <meta property="og:description" content="Personal website of Stian Jensen, software developer from Norway.">
+    <meta property="og:image" content="https://stianj.com/images/me.jpg">
 
     <link rel=stylesheet href=/css/style.css>
     <link rel=stylesheet href=https://fonts.googleapis.com/css?family=Quicksand:300>
