Add twitter card metadata

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -10,6 +10,9 @@
     <meta property="og:description" content="Personal website of Stian Jensen, software developer from Norway.">
     <meta property="og:image" content="https://stianj.com/images/me.jpg">
 
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@stiaje" />
+
     <link rel=stylesheet href=/css/style.css>
     <link rel=stylesheet href=https://fonts.googleapis.com/css?family=Quicksand:300>
 
