--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="{{ page.title }}">
     <meta property="og:url" content="https://stianj.com">
     <meta property="og:description" content="Personal website of Stian Jensen, software developer from Norway.">
-    <meta property="og:image" content="https://stianj.com/images/me.jpg">
+    <meta property="og:image" content="https://stianj.com/images/stiaje.jpg">
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@stiaje" />
