Add Bluesky profile link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,29 +2,59 @@
 layout: base
 ---
 
-<div class=header>
-  <div class=inner-header>
-    <a href="/cv/" class=cv-link>CV</a>
-    <h1 class=title><a href="/">{{ site.name }}</a></h1>
+<div class="header">
+  <div class="inner-header">
+    <a href="/cv/" class="cv-link">CV</a>
+    <h1 class="title"><a href="/">{{ site.name }}</a></h1>
   </div>
 </div>
 
-<div class=content>
-  {{ content }}
-</div>
+<div class="content">{{ content }}</div>
 
-<div class=footer>
-  <div class=contact>
+<div class="footer">
+  <div class="contact">
     <p>
-    Stian Jensen<br />
-    Software Developer<br />
-    me@stianj.com
+      Stian Jensen<br />
+      Software Developer<br />
+      me@stianj.com
     </p>
   </div>
   <div class="social-icons">
-    <a href="https://twitter.com/stiaje/" target="_blank" class="icon-twitter"></a>
-    <a href="https://github.com/stianjensen/" target="_blank" class="icon-github"></a>
-    <a href="https://www.linkedin.com/pub/stian-jensen/47/672/366" target="_blank" class="icon-linkedin"></a>
-    <a href="https://facebook.com/stiaje" target="_blank" class="icon-facebook"></a>
+    <a
+      href="https://github.com/stianjensen/"
+      target="_blank"
+      class="icon-github"
+    ></a>
+    <a
+      href="https://twitter.com/stiaje/"
+      target="_blank"
+      class="icon-twitter"
+    ></a>
+    <a href="https://bsky.app/profile/stianj.com" target="_blank">
+      <svg
+        aria-label="Bluesky"
+        viewBox="0 0 16 16"
+        height="2em"
+        width="2em"
+        fill="currentColor"
+        xmlns="http://www.w3.org/2000/svg"
+        style="margin: 0 0.4em"
+      >
+        <path
+          class="x19hqcy"
+          d="M3.468 1.948C5.303 3.325 7.276 6.118 8 7.616c.725-1.498 2.697-4.29 4.532-5.668C13.855.955 16 .186 16 2.632c0 .489-.28 4.105-.444 4.692-.572 2.04-2.653 2.561-4.504 2.246 3.236.551 4.06 2.375 2.281 4.2-3.376 3.464-4.852-.87-5.23-1.98-.07-.204-.103-.3-.103-.218 0-.081-.033.014-.102.218-.379 1.11-1.855 5.444-5.231 1.98-1.778-1.825-.955-3.65 2.28-4.2-1.85.315-3.932-.205-4.503-2.246C.28 6.737 0 3.12 0 2.632 0 .186 2.145.955 3.468 1.948Z"
+        />
+      </svg>
+    </a>
+    <a
+      href="https://facebook.com/stiaje"
+      target="_blank"
+      class="icon-facebook"
+    ></a>
+    <a
+      href="https://www.linkedin.com/pub/stian-jensen/47/672/366"
+      target="_blank"
+      class="icon-linkedin"
+    ></a>
   </div>
 </div>
